Major pages updated

--- a/src/app/components/competition-page/competition-page.component.html
+++ b/src/app/components/competition-page/competition-page.component.html
@@ -1,3 +1,4 @@
+<div class="ui parent container">
 <div class="ui stackable grid container">
     <div class="nine wide column">
         <img class="ui big rounded image" src="signup.jpg">
@@ -64,6 +65,7 @@
             View All
         </button>
     </div>
+</div>
 </div>
 <app-attend-navbar></app-attend-navbar>
 
